# lan-kvm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
client/: CMakeLists.txt  client.cpp  listener.cpp  listener.h  mac_example.txt
device/: CMakeLists.txt  devicecapture.h  deviceevent.h  evdev.cpp  evdev.h  virtualdevice.cpp
device/linux/: devicecapture.h  deviceevent.h  evdev.cpp  evdev.h  filedescriptor.cpp  filedescriptor.h
device/macos/: codekeyconverter.h  codekeykvk.h  deviceevent.h  keyboardevent.cpp  keyboardevent.h  mouseevent.cpp  mouseevent.h  virtualkeyboard.cpp  virtualkeyboard.h  virtualmouse.cpp  virtualmouse.h
server/: CMakeLists.txt  packetsender.h  server.cpp  sharedqueue.h
